--- a/TMDB/Views/Detail/Components/ReviewTableViewCell/ReviewTableViewCell.xib
+++ b/TMDB/Views/Detail/Components/ReviewTableViewCell/ReviewTableViewCell.xib
@@ -17,50 +17,50 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqy-e6-5Px">
-                        <rect key="frame" x="16" y="6" width="288" height="12"/>
+                        <rect key="frame" x="16" y="12" width="288" height="14"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="wTs-uC-6S2">
-                        <rect key="frame" x="16" y="42" width="288" height="72"/>
+                        <rect key="frame" x="16" y="53" width="288" height="72"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="72" id="VGk-4C-vjT"/>
                         </constraints>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agB-Gi-L5I">
-                        <rect key="frame" x="16" y="26" width="140" height="12"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
+                        <rect key="frame" x="16" y="35" width="140" height="14.333333333333332"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0JD-tC-ngm">
-                        <rect key="frame" x="164" y="26" width="140" height="12"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
+                        <rect key="frame" x="164" y="35" width="140" height="14.333333333333332"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="wTs-uC-6S2" secondAttribute="bottom" id="0NK-9H-e6M"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="wTs-uC-6S2" secondAttribute="bottom" constant="-11" id="0NK-9H-e6M"/>
                     <constraint firstItem="wTs-uC-6S2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="4Z7-nS-b6R"/>
                     <constraint firstItem="agB-Gi-L5I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="8Kp-T3-Z1F"/>
-                    <constraint firstItem="0JD-tC-ngm" firstAttribute="top" secondItem="tqy-e6-5Px" secondAttribute="bottom" constant="8" symbolic="YES" id="Bh1-ux-cEB"/>
+                    <constraint firstItem="0JD-tC-ngm" firstAttribute="top" secondItem="tqy-e6-5Px" secondAttribute="bottom" constant="9" id="Bh1-ux-cEB"/>
                     <constraint firstAttribute="trailing" secondItem="0JD-tC-ngm" secondAttribute="trailing" constant="16" id="FjD-F6-Ro1"/>
                     <constraint firstItem="tqy-e6-5Px" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Gk4-Wz-9c5"/>
                     <constraint firstItem="0JD-tC-ngm" firstAttribute="width" secondItem="agB-Gi-L5I" secondAttribute="width" id="Ixz-dl-Yqp"/>
                     <constraint firstItem="wTs-uC-6S2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="NAn-tD-O9K"/>
                     <constraint firstItem="wTs-uC-6S2" firstAttribute="top" secondItem="agB-Gi-L5I" secondAttribute="bottom" constant="4" id="QIK-Jd-OxY"/>
-                    <constraint firstItem="agB-Gi-L5I" firstAttribute="top" secondItem="tqy-e6-5Px" secondAttribute="bottom" constant="8" symbolic="YES" id="TfB-By-uXo"/>
+                    <constraint firstItem="agB-Gi-L5I" firstAttribute="top" secondItem="tqy-e6-5Px" secondAttribute="bottom" constant="9" id="TfB-By-uXo"/>
                     <constraint firstItem="wTs-uC-6S2" firstAttribute="top" secondItem="0JD-tC-ngm" secondAttribute="bottom" constant="4" id="UDB-bn-PMG"/>
                     <constraint firstItem="0JD-tC-ngm" firstAttribute="height" secondItem="agB-Gi-L5I" secondAttribute="height" id="dbm-Z5-FUV"/>
-                    <constraint firstItem="tqy-e6-5Px" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="fZP-L2-rgL"/>
+                    <constraint firstItem="tqy-e6-5Px" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="fZP-L2-rgL"/>
                     <constraint firstAttribute="trailing" secondItem="tqy-e6-5Px" secondAttribute="trailing" constant="16" id="mwh-GW-KYA"/>
                     <constraint firstItem="0JD-tC-ngm" firstAttribute="leading" secondItem="agB-Gi-L5I" secondAttribute="trailing" constant="8" symbolic="YES" id="pAT-Ec-Ytf"/>
                 </constraints>
@@ -72,7 +72,7 @@
                 <outlet property="dateLabel" destination="0JD-tC-ngm" id="ogv-m0-pcL"/>
                 <outlet property="ratingLabel" destination="agB-Gi-L5I" id="Xoa-4l-2p0"/>
             </connections>
-            <point key="canvasLocation" x="5" y="85"/>
+            <point key="canvasLocation" x="4.5801526717557248" y="84.859154929577471"/>
         </tableViewCell>
     </objects>
 </document>
