--- a/TMDB/Components/Shared Layouts/MovieCollectionViewCell/MovieCollectionViewCell.xib
+++ b/TMDB/Components/Shared Layouts/MovieCollectionViewCell/MovieCollectionViewCell.xib
@@ -19,8 +19,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="THV-hY-g9s">
                         <rect key="frame" x="0.0" y="0.0" width="174" height="261"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.down.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bAQ-Yh-rPG">
-                                <rect key="frame" x="0.0" y="0.0" width="174" height="260.66666666666669"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bAQ-Yh-rPG">
+                                <rect key="frame" x="0.0" y="0.0" width="174" height="261"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -47,7 +47,4 @@
             <point key="canvasLocation" x="174.80916030534351" y="-63.380281690140848"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="square.and.arrow.down.fill" catalog="system" width="121" height="128"/>
-    </resources>
 </document>
