fix: error handling for endpoint

--- a/TMDB/Storyboard/Base.lproj/Main.storyboard
+++ b/TMDB/Storyboard/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twt-6V-BZ4">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -163,6 +164,7 @@
                                                     <constraint firstItem="LlM-r7-mXT" firstAttribute="top" secondItem="1hE-ZF-8F2" secondAttribute="bottom" constant="8" symbolic="YES" id="3kx-1X-KnR"/>
                                                     <constraint firstItem="MqI-sT-3RQ" firstAttribute="top" secondItem="1hE-ZF-8F2" secondAttribute="bottom" constant="8" symbolic="YES" id="G59-gk-ba0"/>
                                                     <constraint firstItem="LlM-r7-mXT" firstAttribute="leading" secondItem="7zr-hM-4x0" secondAttribute="leading" constant="16" id="Iq9-SF-wCJ"/>
+                                                    <constraint firstAttribute="bottom" secondItem="BOj-qx-ZPC" secondAttribute="bottom" constant="4" id="P1U-vQ-wbq"/>
                                                     <constraint firstAttribute="trailing" secondItem="MqI-sT-3RQ" secondAttribute="trailing" constant="16" id="Vav-WU-z7H"/>
                                                     <constraint firstItem="1hE-ZF-8F2" firstAttribute="leading" secondItem="7zr-hM-4x0" secondAttribute="leading" constant="16" id="Z8P-MW-Ha0"/>
                                                     <constraint firstItem="BOj-qx-ZPC" firstAttribute="leading" secondItem="7zr-hM-4x0" secondAttribute="leading" constant="16" id="fLg-kC-nNX"/>
@@ -190,7 +192,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ix3-Zp-PmU">
                                                         <rect key="frame" x="0.0" y="108" width="393" height="84"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xBv-ZP-UzR">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Review Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xBv-ZP-UzR">
                                                                 <rect key="frame" x="0.0" y="20" width="393" height="44"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
